# fullstack

./: .code-workspace  .gitignore
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f5c357d7a178_initial_migration.py
backend/app/: admin.py  app.py  auth.py  auth_backend.py  comments.py  config.py  database.py  dependencies.py  email.py  imagekit_client.py  logging_config.py  manager.py  models.py  posts.py  schemas.py  uploads.py  utils.py
